--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.9.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
     "motion": "^12.9.2",
