--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.9.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.488.0",
     "motion": "^12.9.2",
     "next": "15.3.0",
